--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -9,6 +9,14 @@
                         <group>
                             <field name="name"/>
                             <field name="description"/>
+                            <notebook>
+                                <page string="Description">
+                                    <field name="description"/>
+                                </page>
+                                <page string="About">
+                                    This is an example of notebooks
+                                </page>
+                            </notebook>
                         </group>
                     </sheet>
                 </form>
