--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -7,6 +7,7 @@
                 <form string="Course Form">
                     <sheet>
                         <group>
+                            <field name="name"/>
                             <notebook>
                                 <page string="Description">
                                     <field name="description"/>
