--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -100,6 +100,7 @@
                                 <field name="start_date"/>
                                 <field name="duration"/>
                                 <field name="seats"/>
+                                <field name="taken_seats" widget="progressbar"/>
                             </group>
                         </group>
                         <label for="attendee_ids"/>
@@ -117,6 +118,7 @@
                 <tree string="Session Tree">
                     <field name="name"/>
                     <field name="course_id"/>
+                    <field name="taken_seats" widget="progressbar"/>
                 </tree>
             </field>
         </record>
