[ADD] Advanced Views - gantt 2.0

--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -154,7 +154,7 @@
                        default_group_by='instructor_id'>
                 </gantt>
             </field>
-        </record
+        </record>
 
         <record model="ir.actions.act_window" id="session_list_action">
             <field name="name">Sessions</field>
