--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-
         <record model="ir.ui.view" id="course_form_view">
             <field name="name">course.form</field>
             <field name="model">openacademy.course</field>
@@ -9,30 +8,28 @@
                     <sheet>
                         <group>
                             <field name="name"/>
-<!--                            <field name="description"/>-->
                             <field name="responsible_id"/>
+                            <notebook>
+                                <page string="Description">
+                                    <field name="description"/>
+                                </page>
+                                <page string="Sessions">
+                                    <field name="session_ids">
+                                        <tree string="Registered sessions">
+                                            <field name="name"/>
+                                            <field name="instructor_id"/>
+                                        </tree>
+                                    </field>
+                                </page>
+                                <page string="About">
+                                    This is an example of notebooks
+                                </page>
+                            </notebook>
                         </group>
-                        <notebook>
-                            <page string="Description">
-                                <field name="description"/>
-                            </page>
-                            <page string="Sessions">
-                                <field name="session_ids">
-                                    <tree string="Registered sessions">
-                                        <field name="name"/>
-                                        <field name="instructor_id"/>
-                                    </tree>
-                                </field>
-                            </page>
-                            <page string="About">
-                                This is an example of notebooks
-                            </page>
-                        </notebook>
                     </sheet>
                 </form>
             </field>
         </record>
-
 
         <record model="ir.ui.view" id="course_search_view">
             <field name="name">course.search</field>
@@ -64,7 +61,6 @@
         </record>
 
 
-
         <!-- window action -->
         <!--
             The following tag is an action definition for a "window action",
@@ -74,27 +70,27 @@
             <field name="name">Courses</field>
             <field name="res_model">openacademy.course</field>
             <field name="view_mode">tree,form</field>
+            <field name="context" eval="{'search_default_my_courses': 1}"/>
             <field name="help" type="html">
                 <p class="o_view_nocontent_smiling_face">Create the first course
                 </p>
             </field>
         </record>
 
-        <!-- top level menu: no parent -->
+                            <!-- top level menu: no parent -->
         <menuitem id="main_openacademy_menu" name="Open Academy"/>
-        <!-- A first level in the left side menu is needed
-             before using action= attribute -->
+                            <!-- A first level in the left side menu is needed
+                                before using action= attribute -->
         <menuitem id="openacademy_menu" name="Open Academy"
                   parent="main_openacademy_menu"/>
-        <!-- the following menuitem should appear *after*
-             its parent openacademy_menu and *after* its
-             action course_list_action -->
+                            <!-- the following menuitem should appear *after*
+                                its parent openacademy_menu and *after* its
+                                action course_list_action -->
         <menuitem id="courses_menu" name="Courses" parent="openacademy_menu"
                   action="course_list_action"/>
-        <!-- Full id location:
-             action="openacademy.course_list_action"
-             It is not required when it is the same module -->
-
+                            <!-- Full id location:
+                                action="openacademy.course_list_action"
+                                It is not required when it is the same module -->
         <!-- session form view -->
         <record model="ir.ui.view" id="session_form_view">
             <field name="name">session.form</field>
@@ -107,38 +103,37 @@
                                 <field name="course_id"/>
                                 <field name="name"/>
                                 <field name="instructor_id"/>
+                                <field name="active"/>
                             </group>
                             <group string="Schedule">
                                 <field name="start_date"/>
                                 <field name="duration"/>
                                 <field name="seats"/>
                                 <field name="taken_seats" widget="progressbar"/>
-                                <field name="active"/>
                             </group>
                         </group>
                         <label for="attendee_ids"/>
-                        <field name="attendee_ids" widget="many2manytags"/>
+                        <field name="attendee_ids"/>
                     </sheet>
                 </form>
             </field>
         </record>
 
-<!--         session tree/list view -->
+                <!-- session tree/list view -->
         <record model="ir.ui.view" id="session_tree_view">
             <field name="name">session.tree</field>
             <field name="model">openacademy.session</field>
             <field name="arch" type="xml">
-<!--                <tree string="Session Tree">-->
-                <tree string="Session Tree" decoration-bf="duration&lt;5" decoration-it="duration&gt;15">
+                <tree string="Session Tree" decoration-info="duration&lt;5" decoration-danger="duration&gt;15">
                     <field name="name"/>
                     <field name="course_id"/>
                     <field name="duration" invisible="1"/>
-<!--                    <field name="taken_seats" widget="progressbar"/>-->
+                    <field name="taken_seats" widget="progressbar"/>
                 </tree>
             </field>
         </record>
 
-         <!-- calendar view -->
+        <!-- calendar view -->
         <record model="ir.ui.view" id="session_calendar_view">
             <field name="name">session.calendar</field>
             <field name="model">openacademy.session</field>
@@ -148,6 +143,7 @@
                 </calendar>
             </field>
         </record>
+
 
         <record model="ir.ui.view" id="session_gantt_view">
             <field name="name">session.gantt</field>
@@ -171,24 +167,11 @@
             </field>
         </record>
 
-        <record model="ir.ui.view" id="openacademy_session_pivot_view">
-            <field name="name">openacademy.session.pivot</field>
-            <field name="model">openacademy.session</field>
-            <field name="arch" type="xml">
-                <pivot string="Participations by Courses">
-                    <field name="course_id" type="row"/>
-                    <field name="instructor_id" type="row"/>
-                    <field name="name" type="col"/>
-                    <field name="attendees_count" type="measure"/>
-                </pivot>
-            </field>
-        </record>
-
         <record model="ir.ui.view" id="view_openacad_session_kanban">
             <field name="name">openacademy.session.kanban</field>
             <field name="model">openacademy.session</field>
             <field name="arch" type="xml">
-                <kanban default_group_by="instructor_id">
+                <kanban default_group_by="course_id">
                     <field name="color"/>
                     <templates>
                         <t t-name="kanban-box">
@@ -196,22 +179,22 @@
                                     t-attf-class="oe_kanban_color_{{kanban_getcolor(record.color.raw_value)}}
                                                   oe_kanban_global_click_edit oe_semantic_html_override
                                                   oe_kanban_card {{record.group_fancy==1 ? 'oe_kanban_card_fancy' : ''}}">
-<!--                                <div class="oe_dropdown_kanban">-->
-<!--                                    &lt;!&ndash; dropdown menu &ndash;&gt;-->
-<!--&lt;!&ndash;                                    <div class="oe_dropdown_toggle">&ndash;&gt;-->
-<!--&lt;!&ndash;                                        <i class="fa fa-bars fa-lg" title="Manage" aria-label="Manage"/>&ndash;&gt;-->
-<!--&lt;!&ndash;                                        <ul class="oe_dropdown_menu">&ndash;&gt;-->
-<!--&lt;!&ndash;                                            <li>&ndash;&gt;-->
-<!--&lt;!&ndash;                                                <a type="delete">Delete</a>&ndash;&gt;-->
-<!--&lt;!&ndash;                                            </li>&ndash;&gt;-->
-<!--&lt;!&ndash;                                            <li>&ndash;&gt;-->
-<!--&lt;!&ndash;                                                <ul class="oe_kanban_colorpicker"&ndash;&gt;-->
-<!--&lt;!&ndash;                                                    data-field="color"/>&ndash;&gt;-->
-<!--&lt;!&ndash;                                            </li>&ndash;&gt;-->
-<!--&lt;!&ndash;                                        </ul>&ndash;&gt;-->
-<!--&lt;!&ndash;                                    </div>&ndash;&gt;-->
-<!--                                    <div class="oe_clear"></div>-->
-<!--                                </div>-->
+                                <div class="oe_dropdown_kanban">
+                                    <!-- dropdown menu -->
+                                    <div class="oe_dropdown_toggle">
+                                        <i class="fa fa-bars fa-lg" title="Manage" aria-label="Manage"/>
+                                        <ul class="oe_dropdown_menu">
+                                            <li>
+                                                <a type="delete">Delete</a>
+                                            </li>
+                                            <li>
+                                                <ul class="oe_kanban_colorpicker"
+                                                    data-field="color"/>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <div class="oe_clear"></div>
+                                </div>
                                 <div t-attf-class="oe_kanban_content">
                                     <!-- title -->
                                     Session name:
@@ -230,50 +213,14 @@
             </field>
         </record>
 
-
-
         <record model="ir.actions.act_window" id="session_list_action">
             <field name="name">Sessions</field>
             <field name="res_model">openacademy.session</field>
-            <field name="view_mode">tree,form,calendar,gantt,graph,pivot,kanban</field>
+            <field name="view_mode">tree,form,calendar,gantt,graph,kanban</field>
         </record>
 
         <menuitem id="session_menu" name="Sessions"
                   parent="openacademy_menu"
                   action="session_list_action"/>
 
-
-        <record model="ir.ui.view" id="wizard_form_view">
-            <field name="name">wizard.form</field>
-            <field name="model">openacademy.wizard</field>
-            <field name="arch" type="xml">
-                <form string="Add Attendees">
-                    <group>
-                        <field name="session_id"/>
-                        <field name="attendee_ids"/>
-                    </group>
-                    <footer>
-                        <button name="subscribe" type="object"
-                                string="Subscribe" class="oe_highlight"/>
-                        or
-                        <button special="cancel" string="Cancel"/>
-                    </footer>
-                </form>
-            </field>
-        </record>
-
-<!-- 
-        <act_window id="launch_session_wizard"
-                    name="Add Attendees"
-                    binding_model="openacademy.session"
-                    res_model="openacademy.wizard"
-                    view_mode="form"
-                    target="new"/> -->
-
-        <act_window id="launch_session_wizard"
-                    name="Add Attendees"
-                    res_model="openacademy.wizard"
-                    view_mode="form"
-                    target="new"/>
-
-</odoo> 
+</odoo>
