--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -222,13 +222,15 @@
         <menuitem id="session_menu" name="Sessions"
                   parent="openacademy_menu"
                   action="session_list_action"/>
+
+
         <record model="ir.ui.view" id="wizard_form_view">
             <field name="name">wizard.form</field>
             <field name="model">openacademy.wizard</field>
             <field name="arch" type="xml">
                 <form string="Add Attendees">
                     <group>
-                        <field name="session_id"/>
+                        <field name="session_ids"/>
                         <field name="attendee_ids"/>
                     </group>
                     <footer>
@@ -246,7 +248,15 @@
                     binding_model="openacademy.session"
                     res_model="openacademy.wizard"
                     view_mode="form"
-                    target="new"/> -->
+                    target="new" /> -->
+
+        <!-- <record model="ir.actions.act_window" id="launch_session_wizard">
+            <field name="name">Add Attendees</field>
+            <field name="binding_model">openacademy.session</field>
+            <field name="res_model">openacademy.wizard</field>
+            <field name="view_mode">form</field>
+            <field name="target">new</field>
+        </record> -->
 
 
         <act_window id="launch_session_wizard"
