--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-         <record model="ir.ui.view" id="course_form_view">
+        <record model="ir.ui.view" id="course_form_view">
             <field name="name">course.form</field>
             <field name="model">openacademy.course</field>
             <field name="arch" type="xml">
@@ -9,24 +9,28 @@
                         <group>
                             <field name="name"/>
                             <field name="responsible_id"/>
+                            <notebook>
+                                <page string="Description">
+                                    <field name="description"/>
+                                </page>
+                                <page string="Sessions">
+                                    <field name="session_ids">
+                                        <tree string="Registered sessions">
+                                            <field name="name"/>
+                                            <field name="instructor_id"/>
+                                        </tree>
+                                    </field>
+                                </page>
+                                <page string="About">
+                                    This is an example of notebooks
+                                </page>
+                            </notebook>
                         </group>
-                        <notebook>
-                            <page string="Description">
-                                <field name="description"/>
-                            </page>
-                            <page string="Sessions">
-                                <field name="session_ids">
-                                    <tree string="Registered sessions">
-                                        <field name="name"/>
-                                        <field name="instructor_id"/>
-                                    </tree>
-                                </field>
-                            </page>
-                        </notebook>
                     </sheet>
                 </form>
             </field>
-        </record> 
+        </record>
+
         <record model="ir.ui.view" id="course_search_view">
             <field name="name">course.search</field>
             <field name="model">openacademy.course</field>
@@ -42,7 +46,7 @@
                     </group>
                 </search>
             </field>
-        </record> 
+        </record>
 
         <!-- override the automatically generated list view for courses -->
         <record model="ir.ui.view" id="course_tree_view">
@@ -54,7 +58,9 @@
                     <field name="responsible_id"/>
                 </tree>
             </field>
-        </record>     
+        </record>
+
+
         <!-- window action -->
         <!--
             The following tag is an action definition for a "window action",
@@ -71,21 +77,20 @@
             </field>
         </record>
 
-        <!-- top level menu: no parent -->
+                            <!-- top level menu: no parent -->
         <menuitem id="main_openacademy_menu" name="Open Academy"/>
-        <!-- A first level in the left side menu is needed
-             before using action= attribute -->
+                            <!-- A first level in the left side menu is needed
+                                before using action= attribute -->
         <menuitem id="openacademy_menu" name="Open Academy"
                   parent="main_openacademy_menu"/>
-        <!-- the following menuitem should appear *after*
-             its parent openacademy_menu and *after* its
-             action course_list_action -->
+                            <!-- the following menuitem should appear *after*
+                                its parent openacademy_menu and *after* its
+                                action course_list_action -->
         <menuitem id="courses_menu" name="Courses" parent="openacademy_menu"
                   action="course_list_action"/>
-        <!-- Full id location:
-             action="openacademy.course_list_action"
-             It is not required when it is the same module -->
-        
+                            <!-- Full id location:
+                                action="openacademy.course_list_action"
+                                It is not required when it is the same module -->
         <!-- session form view -->
         <record model="ir.ui.view" id="session_form_view">
             <field name="name">session.form</field>
@@ -94,7 +99,7 @@
                 <form string="Session Form">
                     <sheet>
                         <group>
-                              <group string="General">
+                            <group string="General">
                                 <field name="course_id"/>
                                 <field name="name"/>
                                 <field name="instructor_id"/>
@@ -114,7 +119,7 @@
             </field>
         </record>
 
-        <!-- session tree/list view -->
+                <!-- session tree/list view -->
         <record model="ir.ui.view" id="session_tree_view">
             <field name="name">session.tree</field>
             <field name="model">openacademy.session</field>
@@ -218,6 +223,7 @@
                   parent="openacademy_menu"
                   action="session_list_action"/>
 
+
         <record model="ir.ui.view" id="wizard_form_view">
             <field name="name">wizard.form</field>
             <field name="model">openacademy.wizard</field>
@@ -229,19 +235,25 @@
                     </group>
                     <footer>
                         <button name="subscribe" type="object"
-                                string="Subscribe" class="oe_highlight"/>
+                                string="Subscribe" class="oe_highlight" />
                         or
                         <button special="cancel" string="Cancel"/>
-                    </footer>
+                    </footer>                    
                 </form>
             </field>
         </record>
 
-        <act_window id="launch_session_wizard"
+        <!-- <act_window id="launch_session_wizard"
                     name="Add Attendees"
                     binding_model="openacademy.session"
                     res_model="openacademy.wizard"
                     view_mode="form"
-                    target="new"/>
+                    target="new" /> -->
 
+
+        <act_window id="launch_session_wizard"
+                    name="Add Attendees"
+                    res_model="openacademy.wizard"
+                    view_mode="form"
+                    target="new" />                 
 </odoo>
