--- a/openacademy/views/openacademy.xml
+++ b/openacademy/views/openacademy.xml
@@ -253,6 +253,7 @@
 
         <act_window id="launch_session_wizard"
                     name="Add Attendees"
+                    binding_model="openacademy.session"
                     res_model="openacademy.wizard"
                     view_mode="form"
                     target="new" />                 
